# status-menu-additions

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  extension.js  metadata.json  stylesheet.css
src/: Makefile.am  extension.js  metadata.json
